--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
    <title>rayen.staali</title>
 </head>
 <body>
-        <div class="container">
+        <!-- <div class="container">
                 <div class="split">home-page</div>
                 <div class="split">courses</div>
                 <div class="split">contact-page</div>
-              </div>
+              </div> -->
     <nav>
         <ul>
            <li><a href="index.html">home-page</a></li>
