--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
    <title>rayen.staali</title>
 </head>
 <body>
+    <center>
+    <img src="https://gomycode.tn/images/logo-GMC-Black.png">
+    </center>
         <!-- <div class="container">
                 <div class="split">home-page</div>
                 <div class="split">courses</div>
