--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,12 @@
 <html>
 <head>
-   <meta charset="utf-8"> 
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta rel="stylesheet" href="css/style.css">
+  
+   
    <link rel="stylesheet" href="style.css">
    <title>rayen.staali</title>
 </head>
 <body>
-    <nav>
+ 
         <img src="https://gomycode.tn/images/section2GMCLogo.png" style="=width:50px;height:50px">
         <ul>
            <li><a href="index.html">home-page</a></li>
@@ -16,8 +15,8 @@
         </ul>
     </nav>
     <center>
-        <h1>it's me</h1>
-        <form>
+       
+        <form><h1>it's me</h1> 
            <label>write your name: </label><input type="text" placeholder="write your name">
            <br>
            <label>track </label>
